PLT-602 fix dataTableWidget overlap filters

--- a/src/sharedComponents/dataTableWidget/DataTableWidget.scss
+++ b/src/sharedComponents/dataTableWidget/DataTableWidget.scss
@@ -5,6 +5,8 @@
     &-wrapper {
         @extend .box-shadow-sm;
 
+        min-height: 37.5rem;
+
         .button-group-wrapper {
             ul {
                 margin: 0;
